--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "@testing-library/user-event": "^12.8.3",
     "geonames": "^0.2.1",
     "geonames.js": "^3.0.3",
-    "quill": "^1.3.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-quilljs": "^1.2.14",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
